# mcp-in-practice

./: .gitignore  README.md  mcp-client.py
dataset/: dataset.py  main.py  pyproject.toml
dataset/adk-agent/: agent.py
dataset/client/: client.py
dataset/server/: mcp_server.py
mcp-adk/: .env  pyproject.toml
mcp-adk/client/: __init__.py  agent.py  client.py
mcp-adk/server/: rag_llamaIndex.py
